# serializer version: 1
# name: test_setcover_reject[sk_atomic_maxviol]
  dict({
    'BufferStore': True,
    'EnableMatrixInstruction': True,
    'GlobalSplitU': 0,
    'StreamKAtomic': 1,
    'TileProcessingStrategy': 'StreamK',
    'Valid': False,
    'WorkAssignment': 'StaticGrid',
    'WorkQueueStealing': 0,
    'rejections': list([
      'Atomic Stream-K currently only tested for SGEMM',
    ]),
  })
# ---
# name: test_setcover_reject[sk_cluster_maxviol]
  dict({
    'BufferStore': True,
    'EnableMatrixInstruction': True,
    'GlobalSplitU': 0,
    'StreamKAtomic': 0,
    'TileProcessingStrategy': 'StreamK',
    'Valid': False,
    'WorkAssignment': 'DynamicWorkQueue',
    'WorkQueueStealing': 0,
    'rejections': list([
      'StreamK dynamic/hybrid (SK4/SK5) do not support ClusterDim (cluster support is SK3-only)',
      'Persistent ClusterDim Y-extent > 1 requires DataParallel and a cluster [Cs, Ck] with both axes > 1; got [2, 2]',
    ]),
  })
# ---
# name: test_setcover_reject[sk_debugloop]
  dict({
    'BufferStore': True,
    'EnableMatrixInstruction': True,
    'GlobalSplitU': 0,
    'StreamKAtomic': 0,
    'TileProcessingStrategy': 'StreamK',
    'Valid': False,
    'WorkAssignment': 'DynamicWorkQueue',
    'WorkQueueStealing': 0,
    'rejections': list([
      'DebugPersistentKernelLoopForever requires WorkAssignment=StaticGrid',
    ]),
  })
# ---
# name: test_setcover_reject[sk_pap_maxviol]
  dict({
    'BufferStore': False,
    'EnableMatrixInstruction': True,
    'GlobalSplitU': 0,
    'StreamKAtomic': 0,
    'TileProcessingStrategy': 'StreamK',
    'Valid': False,
    'WorkAssignment': 'StaticGrid',
    'WorkQueueStealing': 0,
    'rejections': list([
      'Persistent execution requires BufferStore',
      'PrefetchAcrossPersistent requires BufferLoad',
      'PrefetchAcrossPersistent requires PGR >= 1',
      'PrefetchAcrossPersistent not supported with DirectToVgpr',
      'PrefetchAcrossPersistent not supported with multiple summation indices',
      'PrefetchAcrossPersistent NLL path requires BufferStore',
      'PrefetchAcrossPersistent NLL path not supported with sparse',
      'PrefetchAcrossPersistent NLL path not supported with StoreRemap',
    ]),
  })
# ---
# name: test_setcover_reject[sk_schedule_maxviol]
  dict({
    'BufferStore': False,
    'EnableMatrixInstruction': False,
    'GlobalSplitU': 0,
    'StreamKAtomic': 0,
    'TileProcessingStrategy': 'StreamK',
    'Valid': False,
    'WorkAssignment': 'StaticGrid',
    'WorkQueueStealing': 0,
    'rejections': list([
      'Stream-K (non-MatrixInstruction) requires Assembly source kernels',
      'General batch is not supported with persistent execution',
      'Grouped GEMM is not supported with persistent execution',
      'ScheduleGlobalRead not supported with Stream-K',
      'ScheduleLocalWrite not supported with Stream-K',
      'Persistent execution requires BufferStore',
    ]),
  })
# ---
# name: test_setcover_reject[sk_ws_maxviol]
  dict({
    'BufferStore': True,
    'EnableMatrixInstruction': True,
    'GlobalSplitU': 0,
    'StreamKAtomic': 1,
    'TileProcessingStrategy': 'StreamK',
    'Valid': False,
    'WorkAssignment': 'StaticGrid',
    'WorkQueueStealing': True,
    'rejections': list([
      'Atomic Stream-K currently only tested for SGEMM',
      'WorkQueueStealing requires StreamK with DynamicWorkQueue or Hybrid',
      'StreamKWorkStealing is not supported with StreamKAtomic',
      'StreamKWorkStealing requires DebugStreamK=0 (the per-queue auto-reset relies on W_q>=1 whenever tiles_q>=1); got 1',
    ]),
  })
# ---
